our donate plan

--- a/index.html
+++ b/index.html
@@ -4,10 +4,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Humanity</title>
+    <title>Show Some Humanity</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <section class="bottom-margin">
+    <div  id="head-cover" class="middle-allignment">
+        <h1 id="cover-heading" class="white-text">Let's Help Those Who Are More In Need</h1>
+
+        <p class="middle-paragraph white-text" >A little help with a little smile gives meaning to human life. Help those less fortunate than you, for it is real human existence.</p>
+
+        <a target="_blank" class="redirect" href="https://assunnahfoundation.org/donate/assunnah-complex">Donate Now</a>
+    </div>
+   </section>
+
+   <section class="bottom-margin">
+    <div class="middle-allignment">
+        <h1 class="body-headings">Donate Today</h1>
+        <p class="middle-paragraph">Giving to charity is great — not just for the recipients but for the givers, too. If you have a good reason you will get a good amount of Charity for any Cause. If you have a Proper Message and a Perfect plan to Spend that Money that its what you can get more Charity from your End.</p>
+    </div>
+    <div class="flex-container">
+        <h1 class="taka">100tk</h1>
+        <h1 id="orange-taka" class="taka">200tk<h1>
+        <h1 class="taka">500tk</h1>
+        <h1 class="taka">1000tk</h1>
+        <h1 class="taka">5000tk</h1>
+    </div>
+    <div class="middle-allignment">
+        <p>Other Amount (Taka)</p>
+        <hr id="underline">
+        <a target="_blank" class="redirect" href="https://assunnahfoundation.org/donate/assunnah-complex">Donate Now</a>
+    </div>
+   </section>
+
+   <section class="bottom-margin">
+    <div class="middle-allignment">
+        <h1 class="body-headings">Our Donate Plan</h1>
+        <p class="middle-paragraph">We work in three different catagories. Food, shelter and education which are the fundamental needs of a human being, our goal is to ensure these three for all.</p>
+    </div>
+    <div id="donate-plans" class="flex-container">
+        <div id="food" class="donate-plan-boxes">
+            <img src="images/food.png" alt="food icon">
+            <h4 class="body-headings">Food for a family</h4>
+            <p>We are promised to provide necessary food items for the needy families around our working territory. we provide them not only food items but also medicines. Moreover we provide them baby foods too.</p>
+        </div>
+        <div id="shelter" class="donate-plan-boxes">
+            <img src="images/shelter.png" alt="a symbol of family">
+            <h4 class="body-headings">Shelter for a family</h4>
+            <p>one of our fundamental duty is to provide shelter for the homeless people. we also work for victims of natural calamities. our duty is to provide them a minimum shelter as they can live with their family.</p>
+        </div>
+        <div id="education" class="donate-plan-boxes">
+            <img src="images/Frame-1.png" alt="digital education symbol">
+            <h4 class="body-headings">education for a child</h4>
+            <p>As Education is the backbone of a nation, we work to ensure basic education for the children. our moto is to provide basic education for all the children. Morever we work for digital education system to prepare them for the modern world.</p>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
