--- a/index.html
+++ b/index.html
@@ -63,5 +63,18 @@
         </div>
     </div>
    </section>
+
+   <section class="flex-container bottom-margin">
+    <div id="contribute" class="half-width">
+        <h1 class="body-headings">Your assistance can bring them happiness</h1>
+        <p>You can be the one to be a reason to their smile. we are working to fullfill their basic needs. But we are highly dependent on your donation.<br>So what are you waiting for! Join us today with what you have. we are waiting to welcome you.</p>
+        <br>
+        <a target="_blank" class="redirect" href="https://assunnahfoundation.org/donation">How to Contribute?</a>
+    </div>
+    <div class="half-width">
+        <img src="images/children.jpg" alt="shredded children">
+    </div>
+   </section>
+   
 </body>
 </html>
