--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
         <img src="images/children.jpg" alt="shredded children">
     </div>
    </section>
+
+   <section class="bottom-margin middle-allignment">
+    <div>
+        <h1 class="body-headings">Get Our Updates</h1>
+        <p>put your email bellow and subscribe us to get regular updates about our activity.</p>
+    </div>
+    <div id="email-box">
+        <form target="_blank" action="https://assunnahfoundation.org/membership">
+            <input type="email" name="Email" id="email" value="Email">
+            <button id="subscribe-button">subscribe</button>
+        </form>
+    </div>
+   </section>
+
+   <footer id="footer" class="middle-allignment">
+    <h1 id="humble"><i>Be Humble</i></h1>
+    <p id="do-it" class="white-text">I'm gonna do it</p>
+   </footer>
    
 </body>
 </html>
