--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 class="taka">5000tk</h1>
     </div>
     <div class="middle-allignment">
-        <p>Other Amount (Taka)</p>
+        <input type="number" placeholder="Other Amount (Taka)" id="other-amount" min="1">
         <hr id="underline">
         <a target="_blank" class="redirect" href="https://assunnahfoundation.org/donate/assunnah-complex">Donate Now</a>
     </div>
